--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
         </div>
     </div>
     <div class="sec-two">
-        <h2>No more stress</h2>
-        <p>Our platform contains experts from almost all works of life, and are 
-competent to carry out any job for you</p>
-<div class="text-two">
+       <h2 style="text-align: center;">No more stress</h2>
+              <p style="text-align: center;">Our platform contains experts from almost all works of life, and are 
+                competent to carry out any job for you</p>
+         <div class="row">
+            <div class="text-two">
     <p>
         Have you ever been in a situation 
 where you need an electrician or a 
@@ -46,12 +47,38 @@ competent enough? that ends with
 clisted. just log into the platform and 
 search for an expert
     </p>
-     <button class="hire-btn">Hire an expert</button>
-</div>
-<div class="two-images">
+     <button class="hire-btn">Hire an expert now</button>
+    </div>
+   <div class="two-images">
     <img src="./images/builder.png" alt="a picture of a builder">
     <img src="./images/accountant.png" alt="">
-</div>
+         </div>    
+
     </div>
+    </div>
+    <div class="sec-three">
+       <div class="last-image">
+        <img src="./images/assist.png" alt="">
+       </div>
+       <div class="last-text">
+        <h1>You too can become a service
+         provider</h1>
+        <p>Are you skillful in a particular domain and you wish to 
+        make some money out of it? create an account in 
+        cslisted , list your expertise and get hired</p>
+        <button class="create-btn">Create an account</button>
+               </div>
+    </div>
+    <footer>
+        <div>
+            <p>&copy; cslisted, all rights reserved. </p>
+        </div>
+        <nav style="justify-content: space-evenly;">
+            <a href="#"  >Facebook</a>
+            <a href="#"  >Twitter</a>
+            <a href="#"  >Linkedln</a>
+            <a href="#"  >Instagram</a>
+        </nav>
+    </footer>
 </body>
 </html>
